--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,13 @@ body {
 .links {
   width: 40%;
   float: inline-end;
-  background-color: plum;
+  background-color: inherit;
+}
+.me h1 {
+  border: 1px;
+  margin: auto;
+  background-color: purple;
+  padding: 20px;
+  text-align: center;
+  color: plum;
 }
